[package]
name = "lepu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitflags = "2.4.2"
percent-encoding = "2.3.1"
roxmltree = "0.18.0"
simplecss = "0.2.1"

# [target.'cfg(not(target_arch="wasm32"))'.dependencies.zune-inflate]
[dependencies.zune-inflate]
version = "0.2.54"
default-features = false
features = ["simd-adler32", "std"]

# [target.'cfg(target_arch="wasm32")'.dependencies.wasm-bindgen]
# version = "0.2.92"
